--- a/main.html
+++ b/main.html
@@ -3,18 +3,33 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Streetfighter</title>
+	<link href='https://fonts.googleapis.com/css?family=Acme' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 	<div class=main>
+
 		<div class=ryu>
 			<div class=ryu-still></div>
 			<div class=ryu-ready></div>
 			<div class=ryu-throwing></div>
+			<div class=ryu-cool></div>
 		</div>
+
 		<div class=hadouken></div>
+
+		<div class=content>
+			<div class=logo-sf></div>
+			<div class=broughttoyou>Brought to you by</div>
+			<div class=logo-jq></div>
+			<div class=instruction>
+				<p id=textleft>Click on Ryu to make him throw a hadouken</p>
+				<p id=textright>Press and hold down the "x" key to make him strike his cool pose!</p>
+			</div>
+		</div>
 	</div>
+
 	<audio id="hadouken-sound" src="sound/hadouken.mp3"></audio>
 
 	<script src="http://code.jquery.com/jquery.min.js"></script>
