Finalize Hulk Ryu fight

--- a/main.html
+++ b/main.html
@@ -19,13 +19,22 @@
 
 		<div class=hadouken></div>
 
+		<div class=hulkryu>
+			<div class=hulkryu-still></div>
+			<div class=hulkryu-ready></div>
+			<div class=hulkryu-throwing></div>
+			<div class=hulkryu-cool></div>
+		</div>
+
+		<div class=hulkhadouken></div>
+
 		<div class=content>
 			<div class=logo-sf></div>
 			<div class=broughttoyou>Brought to you by</div>
 			<div class=logo-jq></div>
 			<div class=instruction>
-				<p id=textleft>Click on Ryu to make him throw a hadouken</p>
-				<p id=textright>Press and hold down the "x" key to make him strike his cool pose!</p>
+				<p id=textleft>Click on either Ryu to make him throw a hadouken</p>
+				<p id=textright>Wanna strike a cool pose? Press and hold "x" for normal-ryu and "y" for hulk-ryu!</p>
 			</div>
 		</div>
 	</div>
