--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
 
 	<audio id="hadouken-sound" src="sound/hadouken.mp3"></audio>
 
-	<script src="http://code.jquery.com/jquery.min.js"></script>
+	<script src="//code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
