--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Streetfighter</title>
-	<link href='//fonts.googleapis.com/css?family=Acme' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Acme' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
@@ -38,10 +38,14 @@
 			</div>
 		</div>
 	</div>
+	<div class=smallscreen>
+		<h1>Please watch on a bigger screen</h1>
+		<h1>Min. width of 1200px required</h1>
+	</div>
 
 	<audio id="hadouken-sound" src="sound/hadouken.mp3"></audio>
 
-	<script src="//code.jquery.com/jquery.min.js"></script>
+	<script src="http://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
