--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Streetfighter</title>
-	<link href='https://fonts.googleapis.com/css?family=Acme' rel='stylesheet' type='text/css'>
+	<link href='//fonts.googleapis.com/css?family=Acme' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
@@ -45,7 +45,7 @@
 
 	<audio id="hadouken-sound" src="sound/hadouken.mp3"></audio>
 
-	<script src="http://code.jquery.com/jquery.min.js"></script>
+	<script src="//code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
